Sun May 21 14:20:32 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* dumpv4.c: Include k5-int.h before krb.h so that PROTOTYPE is not
		redefined. 

Sun May  7 13:46:30 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add AC_HEADER_STDC to define STDC_HEADERS for
		getdate.y. 

Mon May  1 13:36:41 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kdb5_edit.c (kdb5_edit_Init): Check the return code from
		kdb5_init_context().

Fri Apr 28 18:04:26 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (LOCAL_LIBRARIES): put KRB4_LIB inside KLIB, and put
	KDB4_LIB ahead of them both.

Thu Apr 27 13:47:23 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (LOCAL_LIBRARIES): use KRB4_LIB and KDB4_LIB
	directly.
	* configure.in: just use WITH_KRB4.

Wed Apr 19 13:59:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (kdb5_edit_Init): If a default realm is specified
		(with -r), use krb5_set_default_realm so that created keys
		will have the correct realm.

Thu Mar 23 23:28:26 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdb5_edit.c (show_principal, parse_princ_args): Add
		"support_desmd5" flag.

Tue Mar 14 16:29:05 1995    <tytso@rsx-11.mit.edu>

	* ss_wrapper.c (main): Set the return code from ss_execute_line(),
		so that appropriate error checking is done.

Thu Mar  2 12:18:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:53:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:06:26 1995  John Gilmore  (gnu at toad.com)

	* dump.c, dumpv4.c, kdb5_edit.c, ss_wrapper.c, tcl_wrapper.c,
	util.c: Avoid <krb5/...> includes.

Thu Feb 23 19:52:35 1995  Mark Eichin  (eichin@cygnus.com)

	* kdb5_edit.c: add struct timeb and sys/timeb includes from
	getdate.y.
	(ftime): new function, in case we don't HAVE_FTIME.

Tue Feb 14 17:55:47 1995  Tom Yu  (tlyu@dragons-lair)
