@@ -1,19 +1,13 @@
 AC_INIT(kdb5_edit.c)
-WITH_CCOPTS
 CONFIG_RULES
-AC_SET_BUILDTOP
 AC_PROG_INSTALL
 AC_PROG_YACC
 AC_HAVE_HEADERS(unistd.h sys/timeb.h alloca.h)
 AC_HAVE_FUNCS(ftime timezone)
 AC_CONST
 AC_HEADER_STDC
-WITH_NETLIB
 AC_CHECK_LIB(ndbm,main)
 AC_CHECK_LIB(dbm,main)
 AC_HAVE_FUNCS(getcwd)
 SS_RULES
-KRB_INCLUDE
-WITH_KRB4
-WITH_KRB5ROOT
 V5_AC_OUTPUT_MAKEFILE
