@@ -1,3 +1,11 @@
+Fri Jun  9 18:14:43 1995    <tytso@rsx-11.mit.edu>
+
+	* configure.in: Remove standardized set of autoconf macros, which
+		are now handled by CONFIG_RULES.
+
+	* dumpv4.c: Change name of controlling #ifdef to be
+		KRB5_KRB4_COMPAT instead of KRB4.
+
 Sun May 21 14:20:32 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* dumpv4.c: Include k5-int.h before krb.h so that PROTOTYPE is not
